Cherry-pick r289101. rdar://problem/87625596

Two bopomofo tone marks are not moved to the correct place in vertical text with a particular bopomofo font
    https://bugs.webkit.org/show_bug.cgi?id=235257
    <rdar://problem/87625596>

    Reviewed by Darin Adler.

    .:

    Thank you so much to Bobby Tung and But Ko for reporting this bug and providing a test font for it!!!

    * metadata/contributors.json:

    Source/WebCore:

    Turns out one of our character data tables was missing some characters.

    I really dislike these kinds of fixes, because it's just perpetuating the fact that WebKit has big tables of characters
    in its source code. A long-term fix would be a systemic replacement of this entire table with either Unicode property
    lookup, or more ideally, removing the need for it in the first place. Unfortunately, at this point in the release cycle,
    this fix probably needs to be smaller and more targetted.

    Tests: fast/text/bopomofo-tone-marks-2.html
           fast/text/bopomofo-tone-marks.html

    * platform/graphics/FontCascade.cpp:
    (WebCore::FontCascade::isCJKIdeographOrSymbol):

    LayoutTests:

    This can't be a WPT test because we only have permission to add the test font to the WebKit repository.

    Thank you so much to Bobby Tung and But Ko for reporting this bug and providing a test font for it!!!

    * fast/text/bopomofo-tone-marks-2-expected-mismatch.html: Added.
    * fast/text/bopomofo-tone-marks-2.html: Added.
    * fast/text/bopomofo-tone-marks-expected-mismatch.html: Added.
    * fast/text/bopomofo-tone-marks.html: Added.
    * fast/text/resources/BopomofoGposSubset-Regular/BopomofoGposSubset-Regular.ttf: Added.
    * fast/text/resources/BopomofoGposSubset-Regular/LICENSE: Added.

    Canonical link: https://commits.webkit.org/246798@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289101 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.246@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@290917 268f45cc-cd09-0410-ab3c-d52691b4dbfc